--- a/MyPortfolio/Web.config
+++ b/MyPortfolio/Web.config
@@ -63,5 +63,5 @@
     </providers>
   </entityFramework>
 <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=MyPortfolio-2-1-alpha1;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=MyPortfolio;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
   </connectionStrings></configuration>
